--- a/Final/index.html
+++ b/Final/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <title>Space Cube Design</title>
   <link rel="stylesheet" href="css/index.css" type="text/css">
-  
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
