--- a/Final/index.html
+++ b/Final/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -17,7 +17,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="career.html">Career</a></li>
-      <li><a href="designs.html">Designs</a></li>
+      <li><a href="designs.html">Design</a></li>
       <li><a href="https://www.youtube.com/watch?v=Odekn9XiPI8">Contact</a></li>
       <li><a href="https://www.youtube.com/watch?v=1jtjSHDmHHs&t=420s">Who we are</a></li>
 	  
