--- a/Final/index.html
+++ b/Final/index.html
@@ -1,13 +1,13 @@
 
 <!DOCTYPE html>
 
-<html lang="en">
+<html>
 
 <head>
   <meta charset="UTF-8">
   <title>Space Cube Design</title>
   <link rel="stylesheet" href="css/index.css" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  
 </head>
 
 <body>
